src/y.output
Terminals unused in grammar

    CHAR
    ERROR


State 35 conflicts: 19 reduce/reduce
State 97 conflicts: 14 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration
    3                 | declaration_list declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier id SEMI
    7                | type_specifier id LC NUM RC SEMI

    8 fun_declaration: type_specifier id LP params RP compound_stmt

    9 type_specifier: INT
   10               | VOID
   11               | REAL

   12 params: param_list
   13       | VOID

   14 param_list: param
   15           | param_list COMMA param

   16 param: type_specifier id
   17      | type_specifier id LC RC

   18 compound_stmt: LB local_declarations statement_list RB

   19 local_declarations: local_declarations var_declaration
   20                   | %empty

   21 statement_list: statement
   22               | statement_list statement

   23 statement: expression_stmt
   24          | compound_stmt
   25          | selection_stmt
   26          | while_stmt
   27          | for_stmt
   28          | return_stmt

   29 expression_stmt: expression SEMI
   30                | SEMI

   31 expression: assign
   32           | simple_expression

   33 assign: var ASSIGN expression
   34       | error

   35 selection_stmt: IF LP expression RP statement
   36               | IF LP expression RP statement ELSE statement

   37 while_stmt: WHILE LP expression RP statement

   38 for_stmt: FOR LP for_param1 SEMI for_param2 SEMI for_param3 RP statement

   39 for_param1: %empty
   40           | assign

   41 for_param2: %empty
   42           | expression

   43 for_param3: %empty
   44           | assign

   45 return_stmt: RETURN SEMI
   46            | RETURN expression SEMI

   47 var: id
   48    | id LC expression RC
   49    | error

   50 simple_expression: additive_expression relop additive_expression
   51                  | additive_expression

   52 additive_expression: additive_expression addop term
   53                    | term

   54 relop: LT
   55      | LE
   56      | GT
   57      | GE
   58      | EQ
   59      | NE

   60 addop: ADD
   61      | SUB

   62 term: term mulop factor
   63     | factor

   64 factor: LP expression RP
   65       | var
   66       | call
   67       | NUM

   68 mulop: MUL
   69      | DIV

   70 call: id LP args RP

   71 args: arg_list
   72     | %empty

   73 arg_list: arg_list COMMA expression
   74         | expression

   75 id: ID
   76   | error


Terminals, with rules where they appear

    $end (0) 0
    error (256) 34 49 76
    ID (258) 75
    NUM (259) 7 67
    INT (260) 9
    VOID (261) 10 13
    REAL (262) 11
    CHAR (263)
    RETURN (264) 45 46
    IF (265) 35 36
    ELSE (266) 36
    WHILE (267) 37
    FOR (268) 38
    GT <integer> (269) 56
    LT <integer> (270) 54
    GE <integer> (271) 57
    LE <integer> (272) 55
    NE <integer> (273) 59
    EQ <integer> (274) 58
    ADD <integer> (275) 60
    SUB <integer> (276) 61
    MUL <integer> (277) 68
    DIV <integer> (278) 69
    LP (279) 8 35 36 37 38 64 70
    RP (280) 8 35 36 37 38 64 70
    LB (281) 18
    RB (282) 18
    LC (283) 7 17 48
    RC (284) 7 17 48
    SEMI (285) 6 7 29 30 38 45 46
    COMMA (286) 15 73
    ASSIGN (287) 33
    ERROR (288)
    LOWER_THAN_ELSE (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    program <node> (36)
        on left: 1
        on right: 0
    declaration_list <node> (37)
        on left: 2 3
        on right: 1 3
    declaration <node> (38)
        on left: 4 5
        on right: 2 3
    var_declaration <node> (39)
        on left: 6 7
        on right: 4 19
    fun_declaration <node> (40)
        on left: 8
        on right: 5
    type_specifier <node> (41)
        on left: 9 10 11
        on right: 6 7 8 16 17
    params <node> (42)
        on left: 12 13
        on right: 8
    param_list <node> (43)
        on left: 14 15
        on right: 12 15
    param <node> (44)
        on left: 16 17
        on right: 14 15
    compound_stmt <node> (45)
        on left: 18
        on right: 8 24
    local_declarations <node> (46)
        on left: 19 20
        on right: 18 19
    statement_list <node> (47)
        on left: 21 22
        on right: 18 22
    statement <node> (48)
        on left: 23 24 25 26 27 28
        on right: 21 22 35 36 37 38
    expression_stmt <node> (49)
        on left: 29 30
        on right: 23
    expression <node> (50)
        on left: 31 32
        on right: 29 33 35 36 37 42 46 48 64 73 74
    assign <node> (51)
        on left: 33 34
        on right: 31 40 44
    selection_stmt <node> (52)
        on left: 35 36
        on right: 25
    while_stmt <node> (53)
        on left: 37
        on right: 26
    for_stmt <node> (54)
        on left: 38
        on right: 27
    for_param1 <node> (55)
        on left: 39 40
        on right: 38
    for_param2 <node> (56)
        on left: 41 42
        on right: 38
    for_param3 <node> (57)
        on left: 43 44
        on right: 38
    return_stmt <node> (58)
        on left: 45 46
        on right: 28
    var <node> (59)
        on left: 47 48 49
        on right: 33 65
    simple_expression <node> (60)
        on left: 50 51
        on right: 32
    additive_expression <node> (61)
        on left: 52 53
        on right: 50 51 52
    relop <node> (62)
        on left: 54 55 56 57 58 59
        on right: 50
    addop <node> (63)
        on left: 60 61
        on right: 52
    term <node> (64)
        on left: 62 63
        on right: 52 53 62
    factor <node> (65)
        on left: 64 65 66 67
        on right: 62 63
    mulop <node> (66)
        on left: 68 69
        on right: 62
    call <node> (67)
        on left: 70
        on right: 66
    args <node> (68)
        on left: 71 72
        on right: 70
    arg_list <node> (69)
        on left: 73 74
        on right: 71 73
    id <node> (70)
        on left: 75 76
        on right: 6 7 8 16 17 47 48 70


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    REAL  shift, and go to state 3

    program           go to state 4
    declaration_list  go to state 5
    declaration       go to state 6
    var_declaration   go to state 7
    fun_declaration   go to state 8
    type_specifier    go to state 9


State 1

    9 type_specifier: INT .

    $default  reduce using rule 9 (type_specifier)


State 2

   10 type_specifier: VOID .

    $default  reduce using rule 10 (type_specifier)


State 3

   11 type_specifier: REAL .

    $default  reduce using rule 11 (type_specifier)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 10


State 5

    1 program: declaration_list .
    3 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    REAL  shift, and go to state 3

    $default  reduce using rule 1 (program)

    declaration      go to state 11
    var_declaration  go to state 7
    fun_declaration  go to state 8
    type_specifier   go to state 9


State 6

    2 declaration_list: declaration .

    $default  reduce using rule 2 (declaration_list)


State 7

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    6 var_declaration: type_specifier . id SEMI
    7                | type_specifier . id LC NUM RC SEMI
    8 fun_declaration: type_specifier . id LP params RP compound_stmt

    error  shift, and go to state 12
    ID     shift, and go to state 13

    id  go to state 14


State 10

    0 $accept: program $end .

    $default  accept


State 11

    3 declaration_list: declaration_list declaration .

    $default  reduce using rule 3 (declaration_list)


State 12

   76 id: error .

    $default  reduce using rule 76 (id)


State 13

   75 id: ID .

    $default  reduce using rule 75 (id)


State 14

    6 var_declaration: type_specifier id . SEMI
    7                | type_specifier id . LC NUM RC SEMI
    8 fun_declaration: type_specifier id . LP params RP compound_stmt

    LP    shift, and go to state 15
    LC    shift, and go to state 16
    SEMI  shift, and go to state 17


State 15

    8 fun_declaration: type_specifier id LP . params RP compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 18
    REAL  shift, and go to state 3

    type_specifier  go to state 19
    params          go to state 20
    param_list      go to state 21
    param           go to state 22


State 16

    7 var_declaration: type_specifier id LC . NUM RC SEMI

    NUM  shift, and go to state 23


State 17

    6 var_declaration: type_specifier id SEMI .

    $default  reduce using rule 6 (var_declaration)


State 18

   10 type_specifier: VOID .
   13 params: VOID .

    RP        reduce using rule 13 (params)
    $default  reduce using rule 10 (type_specifier)


State 19

   16 param: type_specifier . id
   17      | type_specifier . id LC RC

    error  shift, and go to state 12
    ID     shift, and go to state 13

    id  go to state 24


State 20

    8 fun_declaration: type_specifier id LP params . RP compound_stmt

    RP  shift, and go to state 25


State 21

   12 params: param_list .
   15 param_list: param_list . COMMA param

    COMMA  shift, and go to state 26

    $default  reduce using rule 12 (params)


State 22

   14 param_list: param .

    $default  reduce using rule 14 (param_list)


State 23

    7 var_declaration: type_specifier id LC NUM . RC SEMI

    RC  shift, and go to state 27


State 24

   16 param: type_specifier id .
   17      | type_specifier id . LC RC

    LC  shift, and go to state 28

    $default  reduce using rule 16 (param)


State 25

    8 fun_declaration: type_specifier id LP params RP . compound_stmt

    LB  shift, and go to state 29

    compound_stmt  go to state 30


State 26

   15 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2
    REAL  shift, and go to state 3

    type_specifier  go to state 19
    param           go to state 31


State 27

    7 var_declaration: type_specifier id LC NUM RC . SEMI

    SEMI  shift, and go to state 32


State 28

   17 param: type_specifier id LC . RC

    RC  shift, and go to state 33


State 29

   18 compound_stmt: LB . local_declarations statement_list RB

    $default  reduce using rule 20 (local_declarations)

    local_declarations  go to state 34


State 30

    8 fun_declaration: type_specifier id LP params RP compound_stmt .

    $default  reduce using rule 8 (fun_declaration)


State 31

   15 param_list: param_list COMMA param .

    $default  reduce using rule 15 (param_list)


State 32

    7 var_declaration: type_specifier id LC NUM RC SEMI .

    $default  reduce using rule 7 (var_declaration)


State 33

   17 param: type_specifier id LC RC .

    $default  reduce using rule 17 (param)


State 34

   18 compound_stmt: LB local_declarations . statement_list RB
   19 local_declarations: local_declarations . var_declaration

    error   shift, and go to state 35
    ID      shift, and go to state 13
    NUM     shift, and go to state 36
    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    REAL    shift, and go to state 3
    RETURN  shift, and go to state 37
    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    FOR     shift, and go to state 40
    LP      shift, and go to state 41
    LB      shift, and go to state 29
    SEMI    shift, and go to state 42

    var_declaration      go to state 43
    type_specifier       go to state 44
    compound_stmt        go to state 45
    statement_list       go to state 46
    statement            go to state 47
    expression_stmt      go to state 48
    expression           go to state 49
    assign               go to state 50
    selection_stmt       go to state 51
    while_stmt           go to state 52
    for_stmt             go to state 53
    return_stmt          go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 35

   34 assign: error .
   49 var: error .
   76 id: error .

    GT        reduce using rule 49 (var)
    GT        [reduce using rule 76 (id)]
    LT        reduce using rule 49 (var)
    LT        [reduce using rule 76 (id)]
    GE        reduce using rule 49 (var)
    GE        [reduce using rule 76 (id)]
    LE        reduce using rule 49 (var)
    LE        [reduce using rule 76 (id)]
    NE        reduce using rule 49 (var)
    NE        [reduce using rule 76 (id)]
    EQ        reduce using rule 49 (var)
    EQ        [reduce using rule 76 (id)]
    ADD       reduce using rule 49 (var)
    ADD       [reduce using rule 76 (id)]
    SUB       reduce using rule 49 (var)
    SUB       [reduce using rule 76 (id)]
    MUL       reduce using rule 49 (var)
    MUL       [reduce using rule 76 (id)]
    DIV       reduce using rule 49 (var)
    DIV       [reduce using rule 76 (id)]
    LP        reduce using rule 76 (id)
    RP        reduce using rule 34 (assign)
    RP        [reduce using rule 49 (var)]
    RP        [reduce using rule 76 (id)]
    LC        reduce using rule 76 (id)
    RC        reduce using rule 34 (assign)
    RC        [reduce using rule 49 (var)]
    RC        [reduce using rule 76 (id)]
    SEMI      reduce using rule 34 (assign)
    SEMI      [reduce using rule 49 (var)]
    SEMI      [reduce using rule 76 (id)]
    COMMA     reduce using rule 34 (assign)
    COMMA     [reduce using rule 49 (var)]
    COMMA     [reduce using rule 76 (id)]
    ASSIGN    reduce using rule 49 (var)
    ASSIGN    [reduce using rule 76 (id)]
    $default  reduce using rule 49 (var)


State 36

   67 factor: NUM .

    $default  reduce using rule 67 (factor)


State 37

   45 return_stmt: RETURN . SEMI
   46            | RETURN . expression SEMI

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41
    SEMI   shift, and go to state 62

    expression           go to state 63
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 38

   35 selection_stmt: IF . LP expression RP statement
   36               | IF . LP expression RP statement ELSE statement

    LP  shift, and go to state 64


State 39

   37 while_stmt: WHILE . LP expression RP statement

    LP  shift, and go to state 65


State 40

   38 for_stmt: FOR . LP for_param1 SEMI for_param2 SEMI for_param3 RP statement

    LP  shift, and go to state 66


State 41

   64 factor: LP . expression RP

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    expression           go to state 67
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 42

   30 expression_stmt: SEMI .

    $default  reduce using rule 30 (expression_stmt)


State 43

   19 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 19 (local_declarations)


State 44

    6 var_declaration: type_specifier . id SEMI
    7                | type_specifier . id LC NUM RC SEMI

    error  shift, and go to state 12
    ID     shift, and go to state 13

    id  go to state 68


State 45

   24 statement: compound_stmt .

    $default  reduce using rule 24 (statement)


State 46

   18 compound_stmt: LB local_declarations statement_list . RB
   22 statement_list: statement_list . statement

    error   shift, and go to state 35
    ID      shift, and go to state 13
    NUM     shift, and go to state 36
    RETURN  shift, and go to state 37
    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    FOR     shift, and go to state 40
    LP      shift, and go to state 41
    LB      shift, and go to state 29
    RB      shift, and go to state 69
    SEMI    shift, and go to state 42

    compound_stmt        go to state 45
    statement            go to state 70
    expression_stmt      go to state 48
    expression           go to state 49
    assign               go to state 50
    selection_stmt       go to state 51
    while_stmt           go to state 52
    for_stmt             go to state 53
    return_stmt          go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 47

   21 statement_list: statement .

    $default  reduce using rule 21 (statement_list)


State 48

   23 statement: expression_stmt .

    $default  reduce using rule 23 (statement)


State 49

   29 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 71


State 50

   31 expression: assign .

    $default  reduce using rule 31 (expression)


State 51

   25 statement: selection_stmt .

    $default  reduce using rule 25 (statement)


State 52

   26 statement: while_stmt .

    $default  reduce using rule 26 (statement)


State 53

   27 statement: for_stmt .

    $default  reduce using rule 27 (statement)


State 54

   28 statement: return_stmt .

    $default  reduce using rule 28 (statement)


State 55

   33 assign: var . ASSIGN expression
   65 factor: var .

    ASSIGN  shift, and go to state 72

    $default  reduce using rule 65 (factor)


State 56

   32 expression: simple_expression .

    $default  reduce using rule 32 (expression)


State 57

   50 simple_expression: additive_expression . relop additive_expression
   51                  | additive_expression .
   52 additive_expression: additive_expression . addop term

    GT   shift, and go to state 73
    LT   shift, and go to state 74
    GE   shift, and go to state 75
    LE   shift, and go to state 76
    NE   shift, and go to state 77
    EQ   shift, and go to state 78
    ADD  shift, and go to state 79
    SUB  shift, and go to state 80

    $default  reduce using rule 51 (simple_expression)

    relop  go to state 81
    addop  go to state 82


State 58

   53 additive_expression: term .
   62 term: term . mulop factor

    MUL  shift, and go to state 83
    DIV  shift, and go to state 84

    $default  reduce using rule 53 (additive_expression)

    mulop  go to state 85


State 59

   63 term: factor .

    $default  reduce using rule 63 (term)


State 60

   66 factor: call .

    $default  reduce using rule 66 (factor)


State 61

   47 var: id .
   48    | id . LC expression RC
   70 call: id . LP args RP

    LP  shift, and go to state 86
    LC  shift, and go to state 87

    $default  reduce using rule 47 (var)


State 62

   45 return_stmt: RETURN SEMI .

    $default  reduce using rule 45 (return_stmt)


State 63

   46 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 88


State 64

   35 selection_stmt: IF LP . expression RP statement
   36               | IF LP . expression RP statement ELSE statement

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    expression           go to state 89
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 65

   37 while_stmt: WHILE LP . expression RP statement

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    expression           go to state 90
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 66

   38 for_stmt: FOR LP . for_param1 SEMI for_param2 SEMI for_param3 RP statement

    error  shift, and go to state 35
    ID     shift, and go to state 13

    SEMI  reduce using rule 39 (for_param1)

    assign      go to state 91
    for_param1  go to state 92
    var         go to state 93
    id          go to state 94


State 67

   64 factor: LP expression . RP

    RP  shift, and go to state 95


State 68

    6 var_declaration: type_specifier id . SEMI
    7                | type_specifier id . LC NUM RC SEMI

    LC    shift, and go to state 16
    SEMI  shift, and go to state 17


State 69

   18 compound_stmt: LB local_declarations statement_list RB .

    $default  reduce using rule 18 (compound_stmt)


State 70

   22 statement_list: statement_list statement .

    $default  reduce using rule 22 (statement_list)


State 71

   29 expression_stmt: expression SEMI .

    $default  reduce using rule 29 (expression_stmt)


State 72

   33 assign: var ASSIGN . expression

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    expression           go to state 96
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 73

   56 relop: GT .

    $default  reduce using rule 56 (relop)


State 74

   54 relop: LT .

    $default  reduce using rule 54 (relop)


State 75

   57 relop: GE .

    $default  reduce using rule 57 (relop)


State 76

   55 relop: LE .

    $default  reduce using rule 55 (relop)


State 77

   59 relop: NE .

    $default  reduce using rule 59 (relop)


State 78

   58 relop: EQ .

    $default  reduce using rule 58 (relop)


State 79

   60 addop: ADD .

    $default  reduce using rule 60 (addop)


State 80

   61 addop: SUB .

    $default  reduce using rule 61 (addop)


State 81

   50 simple_expression: additive_expression relop . additive_expression

    error  shift, and go to state 97
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    var                  go to state 98
    additive_expression  go to state 99
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 82

   52 additive_expression: additive_expression addop . term

    error  shift, and go to state 97
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    var     go to state 98
    term    go to state 100
    factor  go to state 59
    call    go to state 60
    id      go to state 61


State 83

   68 mulop: MUL .

    $default  reduce using rule 68 (mulop)


State 84

   69 mulop: DIV .

    $default  reduce using rule 69 (mulop)


State 85

   62 term: term mulop . factor

    error  shift, and go to state 97
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    var     go to state 98
    factor  go to state 101
    call    go to state 60
    id      go to state 61


State 86

   70 call: id LP . args RP

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    RP  reduce using rule 72 (args)

    expression           go to state 102
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    args                 go to state 103
    arg_list             go to state 104
    id                   go to state 61


State 87

   48 var: id LC . expression RC

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    expression           go to state 105
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 88

   46 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 46 (return_stmt)


State 89

   35 selection_stmt: IF LP expression . RP statement
   36               | IF LP expression . RP statement ELSE statement

    RP  shift, and go to state 106


State 90

   37 while_stmt: WHILE LP expression . RP statement

    RP  shift, and go to state 107


State 91

   40 for_param1: assign .

    $default  reduce using rule 40 (for_param1)


State 92

   38 for_stmt: FOR LP for_param1 . SEMI for_param2 SEMI for_param3 RP statement

    SEMI  shift, and go to state 108


State 93

   33 assign: var . ASSIGN expression

    ASSIGN  shift, and go to state 72


State 94

   47 var: id .
   48    | id . LC expression RC

    LC  shift, and go to state 87

    $default  reduce using rule 47 (var)


State 95

   64 factor: LP expression RP .

    $default  reduce using rule 64 (factor)


State 96

   33 assign: var ASSIGN expression .

    $default  reduce using rule 33 (assign)


State 97

   49 var: error .
   76 id: error .

    GT        reduce using rule 49 (var)
    GT        [reduce using rule 76 (id)]
    LT        reduce using rule 49 (var)
    LT        [reduce using rule 76 (id)]
    GE        reduce using rule 49 (var)
    GE        [reduce using rule 76 (id)]
    LE        reduce using rule 49 (var)
    LE        [reduce using rule 76 (id)]
    NE        reduce using rule 49 (var)
    NE        [reduce using rule 76 (id)]
    EQ        reduce using rule 49 (var)
    EQ        [reduce using rule 76 (id)]
    ADD       reduce using rule 49 (var)
    ADD       [reduce using rule 76 (id)]
    SUB       reduce using rule 49 (var)
    SUB       [reduce using rule 76 (id)]
    MUL       reduce using rule 49 (var)
    MUL       [reduce using rule 76 (id)]
    DIV       reduce using rule 49 (var)
    DIV       [reduce using rule 76 (id)]
    LP        reduce using rule 76 (id)
    RP        reduce using rule 49 (var)
    RP        [reduce using rule 76 (id)]
    LC        reduce using rule 76 (id)
    RC        reduce using rule 49 (var)
    RC        [reduce using rule 76 (id)]
    SEMI      reduce using rule 49 (var)
    SEMI      [reduce using rule 76 (id)]
    COMMA     reduce using rule 49 (var)
    COMMA     [reduce using rule 76 (id)]
    $default  reduce using rule 49 (var)


State 98

   65 factor: var .

    $default  reduce using rule 65 (factor)


State 99

   50 simple_expression: additive_expression relop additive_expression .
   52 additive_expression: additive_expression . addop term

    ADD  shift, and go to state 79
    SUB  shift, and go to state 80

    $default  reduce using rule 50 (simple_expression)

    addop  go to state 82


State 100

   52 additive_expression: additive_expression addop term .
   62 term: term . mulop factor

    MUL  shift, and go to state 83
    DIV  shift, and go to state 84

    $default  reduce using rule 52 (additive_expression)

    mulop  go to state 85


State 101

   62 term: term mulop factor .

    $default  reduce using rule 62 (term)


State 102

   74 arg_list: expression .

    $default  reduce using rule 74 (arg_list)


State 103

   70 call: id LP args . RP

    RP  shift, and go to state 109


State 104

   71 args: arg_list .
   73 arg_list: arg_list . COMMA expression

    COMMA  shift, and go to state 110

    $default  reduce using rule 71 (args)


State 105

   48 var: id LC expression . RC

    RC  shift, and go to state 111


State 106

   35 selection_stmt: IF LP expression RP . statement
   36               | IF LP expression RP . statement ELSE statement

    error   shift, and go to state 35
    ID      shift, and go to state 13
    NUM     shift, and go to state 36
    RETURN  shift, and go to state 37
    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    FOR     shift, and go to state 40
    LP      shift, and go to state 41
    LB      shift, and go to state 29
    SEMI    shift, and go to state 42

    compound_stmt        go to state 45
    statement            go to state 112
    expression_stmt      go to state 48
    expression           go to state 49
    assign               go to state 50
    selection_stmt       go to state 51
    while_stmt           go to state 52
    for_stmt             go to state 53
    return_stmt          go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 107

   37 while_stmt: WHILE LP expression RP . statement

    error   shift, and go to state 35
    ID      shift, and go to state 13
    NUM     shift, and go to state 36
    RETURN  shift, and go to state 37
    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    FOR     shift, and go to state 40
    LP      shift, and go to state 41
    LB      shift, and go to state 29
    SEMI    shift, and go to state 42

    compound_stmt        go to state 45
    statement            go to state 113
    expression_stmt      go to state 48
    expression           go to state 49
    assign               go to state 50
    selection_stmt       go to state 51
    while_stmt           go to state 52
    for_stmt             go to state 53
    return_stmt          go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 108

   38 for_stmt: FOR LP for_param1 SEMI . for_param2 SEMI for_param3 RP statement

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    SEMI  reduce using rule 41 (for_param2)

    expression           go to state 114
    assign               go to state 50
    for_param2           go to state 115
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 109

   70 call: id LP args RP .

    $default  reduce using rule 70 (call)


State 110

   73 arg_list: arg_list COMMA . expression

    error  shift, and go to state 35
    ID     shift, and go to state 13
    NUM    shift, and go to state 36
    LP     shift, and go to state 41

    expression           go to state 116
    assign               go to state 50
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 111

   48 var: id LC expression RC .

    $default  reduce using rule 48 (var)


State 112

   35 selection_stmt: IF LP expression RP statement .
   36               | IF LP expression RP statement . ELSE statement

    ELSE  shift, and go to state 117

    $default  reduce using rule 35 (selection_stmt)


State 113

   37 while_stmt: WHILE LP expression RP statement .

    $default  reduce using rule 37 (while_stmt)


State 114

   42 for_param2: expression .

    $default  reduce using rule 42 (for_param2)


State 115

   38 for_stmt: FOR LP for_param1 SEMI for_param2 . SEMI for_param3 RP statement

    SEMI  shift, and go to state 118


State 116

   73 arg_list: arg_list COMMA expression .

    $default  reduce using rule 73 (arg_list)


State 117

   36 selection_stmt: IF LP expression RP statement ELSE . statement

    error   shift, and go to state 35
    ID      shift, and go to state 13
    NUM     shift, and go to state 36
    RETURN  shift, and go to state 37
    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    FOR     shift, and go to state 40
    LP      shift, and go to state 41
    LB      shift, and go to state 29
    SEMI    shift, and go to state 42

    compound_stmt        go to state 45
    statement            go to state 119
    expression_stmt      go to state 48
    expression           go to state 49
    assign               go to state 50
    selection_stmt       go to state 51
    while_stmt           go to state 52
    for_stmt             go to state 53
    return_stmt          go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 118

   38 for_stmt: FOR LP for_param1 SEMI for_param2 SEMI . for_param3 RP statement

    error  shift, and go to state 35
    ID     shift, and go to state 13

    RP  reduce using rule 43 (for_param3)

    assign      go to state 120
    for_param3  go to state 121
    var         go to state 93
    id          go to state 94


State 119

   36 selection_stmt: IF LP expression RP statement ELSE statement .

    $default  reduce using rule 36 (selection_stmt)


State 120

   44 for_param3: assign .

    $default  reduce using rule 44 (for_param3)


State 121

   38 for_stmt: FOR LP for_param1 SEMI for_param2 SEMI for_param3 . RP statement

    RP  shift, and go to state 122


State 122

   38 for_stmt: FOR LP for_param1 SEMI for_param2 SEMI for_param3 RP . statement

    error   shift, and go to state 35
    ID      shift, and go to state 13
    NUM     shift, and go to state 36
    RETURN  shift, and go to state 37
    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    FOR     shift, and go to state 40
    LP      shift, and go to state 41
    LB      shift, and go to state 29
    SEMI    shift, and go to state 42

    compound_stmt        go to state 45
    statement            go to state 123
    expression_stmt      go to state 48
    expression           go to state 49
    assign               go to state 50
    selection_stmt       go to state 51
    while_stmt           go to state 52
    for_stmt             go to state 53
    return_stmt          go to state 54
    var                  go to state 55
    simple_expression    go to state 56
    additive_expression  go to state 57
    term                 go to state 58
    factor               go to state 59
    call                 go to state 60
    id                   go to state 61


State 123

   38 for_stmt: FOR LP for_param1 SEMI for_param2 SEMI for_param3 RP statement .

    $default  reduce using rule 38 (for_stmt)
